fix z-index for popup

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -89,6 +89,7 @@ h1 {
     padding: 20px;
     margin: 5%;
     border: 1px solid white;
+    z-index: 9999;
 }
 
 #showFormButton {
